--- a/appenv/src/src/bower.json
+++ b/appenv/src/src/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "angular-bootstrap": "^2.1.3",
     "angular-route": "^1.5.8",
-    "bootstrap-css-only": "^3.3.7"
+    "bootstrap-css-only": "^3.3.7",
+    "ngSocketIO": "angular-socketio#*"
   }
 }
