--- a/appenv/src/src/bower.json
+++ b/appenv/src/src/bower.json
@@ -25,6 +25,8 @@
     "angular-bootstrap": "^2.1.3",
     "angular-route": "^1.5.8",
     "bootstrap-css-only": "^3.3.7",
-    "ngSocketIO": "angular-socketio#*"
+    "ngSocketIO": "angular-socketio#*",
+    "ng-file-upload-shim": "^12.2.13",
+    "ng-file-upload": "^12.2.13"
   }
 }
