--- a/src/src/bower.json
+++ b/src/src/bower.json
@@ -22,10 +22,11 @@
     "tests"
   ],
   "dependencies": {
+    "angular": "^1.5.8",
     "angular-bootstrap": "^2.1.3",
+    "angular-cookies": "1.5.8",
     "angular-route": "^1.5.8",
     "bootstrap-css-only": "^3.3.7",
-    "ngSocketIO": "angular-socketio#*",
     "ng-file-upload-shim": "^12.2.13",
     "ng-file-upload": "^12.2.13"
   }
