(build) bundles scripts and injected them with styles into index.html

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .idea/*
 .idea/*.*
 .idea/*/*.*
+src/src/static/node_modules/
+src/src/static/node_modules/*
+src/src/static/node_modules/*.*
+src/src/static/node_modules/*/*.* 
