--- a/src/src/static/package.json
+++ b/src/src/static/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "flask-rfid-app-client",
+  "name": "rfid-flask-app",
   "version": "1.0.0",
-  "description": "rfid management client side app",
-  "main": "app.js",
+  "description": "rfid management iot app for raspberry pi",
+  "main": "angular.app.js",
   "scripts": {
-    "build": "gulp scripts && gulp styles"
+    "scripts": "gulp scripts",
+    "styles": " gulp styles"
   },
   "keywords": [
-    "angularjs",
-    "gulp",
     "rfid",
-    "flask"
+    "flask",
+    "angularjs",
+    "gulp"
   ],
   "author": "Matija Čvrk",
   "license": "MIT",
@@ -19,7 +20,6 @@
     "gulp-angular-filesort": "^1.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-inject": "^4.2.0",
-    "gulp-prefix": "0.0.15",
     "gulp-uglify": "^3.0.0"
   }
 }
