(build) completed build setup for gulp

--- a/src/src/static/package.json
+++ b/src/src/static/package.json
@@ -4,6 +4,7 @@
   "description": "rfid management iot app for raspberry pi",
   "main": "angular.app.js",
   "scripts": {
+    "build": "gulp build",
     "scripts": "gulp scripts",
     "styles": " gulp styles"
   },
