(gitignore) updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 .idea/*
 .idea/*.*
 .idea/*/*.*
-src/src/static/node_modules/
-src/src/static/node_modules/*
-src/src/static/node_modules/*.*
-src/src/static/node_modules/*/*.* 
+node_modules/
+.node_modules/
 data/rfid-db.sqlite
 .data/rfid-db.sqlite
