(bower&npm) changed app description in external package config files

--- a/administration/src/bower.json
+++ b/administration/src/bower.json
@@ -3,7 +3,7 @@
   "authors": [
     "Matija Čvrk <matijacvrk@gmail.com>"
   ],
-  "description": "rfid management iot app for raspberry pi",
+  "description": "rfid administration iot app for raspberry pi",
   "main": "static/app.js",
   "keywords": [
     "rifd",
